# linxpad

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  install  logo.acii  prompt  pyproject.toml  requirements-dev.txt  uninstall
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
docs/: developer-usage.md  index.html  project-structure.md  release-howto.md
docs/images/: 00_linxpad-cover.jpg~
docs/manuals/: developer-usage.md  packaging-and-testing.md  project-structure.md  release-howto.md
packaging/: distro-versions.conf
packaging/debian/: changelog  control  rules
packaging/flatpak/: io.github.apapamarkou.linxpad.yaml
packaging/scripts/: build-appimage.sh  build-arch-pkgbuild.sh  build-deb.sh  build-fedora-rpm.sh  build-flatpak.sh  build-opensuse-rpm.sh  build-src-tarball.sh  build-tarball.sh  packages.sh  release.sh  test-packages.sh
packaging/specs/: linxpad.desktop  linxpad.spec
packaging/tests/: test-arch-pkg.sh  test-deb.sh  test-fedora-rpm.sh  test-flatpak.sh  test-opensuse-rpm.sh  test-tarball.sh
src/linxpad/: __init__.py  main.py
src/linxpad/core/: __init__.py  launcher_state.py  scanner_worker.py
src/linxpad/models/: __init__.py  application.py  folder.py
src/linxpad/services/: __init__.py  config.py  desktop.py  desktop_watcher.py  filesearch.py  icons.py  settings.py  websearch.py
src/linxpad/ui/: __init__.py  settings_view.py  theme.py  window.py
src/linxpad/ui/views/: __init__.py  (+2 more)
src/linxpad/utils/: __init__.py  single_instance.py
tests/: test_config.py  test_desktop.py  test_desktop_watcher.py  test_drag_handler.py  test_grid_view.py  test_icon_item.py  test_launcher_state.py  test_page_scene.py  test_rescan.py
(+15 files in other folders)
